gcclikecompiler: properly resolve include paths with symbolic links

Make sure include paths containing symbolic links are canonicalized
- and thereby properly resolved - before wrapping them in a Path
object. This is necessary, as class Path is not properly handling
symbolic links.

BUG: 405221