plugins/custom-definesandincludes/compilerprovider/gcclikecompiler.cpp
@@ -208,7 +208,7 @@ Path::List GccLikeCompiler::includes(Utils::LanguageType type, const QString& ar
                     mode = Finished;
                 } else {
                     // This is an include path, add it to the list.
-                    auto hostPath = rt->pathInHost(Path(line.trimmed().toString()));
+                    auto hostPath = rt->pathInHost(Path(QFileInfo(line.trimmed().toString()).canonicalFilePath()));
                     // but skip folders with compiler builtins, we cannot parse these with clang
                     if (!QFile::exists(hostPath.toLocalFile() + QLatin1String("/cpuid.h"))) {
                         data.includePaths << Path(QFileInfo(hostPath.toLocalFile()).canonicalFilePath());
